# FlowReasoning

./: .gitignore  README.md  config.py  main.py  pyproject.toml
runs/application/analysis/: RESULTS.md
scripts/: analyze_application_results.py  run_application_experiments.py
src/: __init__.py  core.py  data_loading.py  model.py  train.py  utils.py
tests/: test_checkpoint.py  test_data_loading.py  test_model.py  test_training.py
