[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowreasoning"
version = "0.1.0"
description = "A compact language model with iterative latent-state evolution"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ethan Ramsey" }]
dependencies = ["torch>=2.1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
flowreasoning = "main:main"

[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
